<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/loginTopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="121dp"
        android:text="@string/loginText"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic" />


    <ImageView
        android:id="@+id/logo_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="-15dp"
        android:layout_marginBottom="530dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/loginLogin"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTopText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="55dp"
        android:autofillHints="login"
        android:hint="@string/loginRegister"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        android:background="@color/dark_gray"
        android:textSize="25sp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="54dp"
        android:autofillHints="login"
        android:background="@color/dark_gray"
        android:hint="@string/registerPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        android:textSize="25sp"
        android:padding="10dp" />

</RelativeLayout>